k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
    - http:
        paths:
          - path: /authentication/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8888
          - path: /devProductivity/?(.*)
            pathType: Prefix
            backend:
              service:
                name: productivity-service-service
                port:
                  number: 9193
